--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "typeface-work-sans": "^1.1.13",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
