Install axios. Implement API helper

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "typeface-work-sans": "^1.1.13",
     "vue": "^3.0.0",
